feat(front):add item module to hero page
